--- a/style.css
+++ b/style.css
@@ -52,9 +52,9 @@ body {
 
 .covid-cases-ph, .covid-cases-jp {
   display: flex;
-  flex-wrap: wrap;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: space-between;
+  flex-wrap: wrap;
   gap: 1rem;
 }
 
